--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fluentui/react-calendar-compat": "^0.2.1",
     "@fluentui/react-components": "^9.60.0",
+    "@fluentui/react-datepicker-compat": "^0.5.1",
+    "@fluentui/react-icons": "^2.0.279",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.3.0"
