--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@fluentui/react-components": "^9.60.0",
     "@fluentui/react-datepicker-compat": "^0.5.1",
     "@fluentui/react-icons": "^2.0.279",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.3.0"
+    "axios": "^1.8.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
